Small fix, completed User api doc
